--- a/client/src/app.postcss
+++ b/client/src/app.postcss
@@ -6,3 +6,25 @@
 body {
 	outline: none !important;
 }
+
+.alert {
+	@apply mb-4;
+
+	display: flex !important;
+	flex-direction: row !important;
+	align-items: center !important;
+	padding: 0.5rem 1rem !important;
+}
+
+.alert > .alert-message {
+	@apply ml-2;
+	margin-top: 0 !important;
+}
+
+.alert > .alert-message > p {
+	margin-top: 0 !important;
+}
+
+.alert > .btn-icon {
+	margin-top: 0 !important;
+}
