Feat: improove UI

--- a/web/src/app.postcss
+++ b/web/src/app.postcss
@@ -28,3 +28,11 @@ body {
 .alert > .btn-icon {
 	margin-top: 0 !important;
 }
+
+.text-auto {
+	background: inherit;
+	-webkit-background-clip: text;
+	background-clip: text;
+	color: transparent;
+	filter: sepia(5) saturate(100) invert(1) grayscale(1) contrast(9);
+}
